# PSMoveService

./: .codedocs  .gitattributes  .gitignore  .gitmodules  BuildOfficialDistribution.bat  CMakeLists.txt  Doxyfile  GenerateProjectFiles_Win32.bat  GenerateProjectFiles_X64.bat  InitialSetup.bat  InitialSetup_Win32.bat  InitialSetup_X64.bat  README.md  RebuildAllConfigurations.bat  RebuildOfficialDistribution.bat  RunCMake.bat  SetBuildVars_x64.bat
bindings/: CMakeLists.txt  PSMoveClient.i  PSMoveClientCSharpCallbacks.i  PSMoveClientCSharpTypeMaps.i  RebuildCSharpBindings.bat
bindings/csharp/: PSMBatteryState.cs  PSMButtonState.cs  PSMClientControllerInfo.cs  PSMClientHMDInfo.cs  PSMClientTrackerInfo.cs  PSMConnectionType.cs  PSMController.cs  PSMControllerDataStreamFlags.cs  PSMControllerHand.cs  PSMControllerList.cs  PSMControllerRumbleChannel.cs  PSMControllerType.cs  PSMController_ControllerState.cs  PSMDS4CalibratedSensorData.cs  PSMDS4RawSensorData.cs  PSMDualShock4.cs  PSMEventMessage.cs  PSMEventMessageType.cs  PSMFrustum.cs  PSMHeadMountedDisplay.cs  PSMHeadMountedDisplay_HmdState.cs  PSMHmdList.cs  PSMHmdType.cs  PSMMatrix3f.cs  PSMMessage.cs  PSMMessageType.cs  PSMMorpheus.cs  PSMMorpheusCalibratedSensorData.cs  PSMMorpheusRawSensorData.cs  PSMPSMove.cs  PSMPSMoveCalibratedSensorData.cs  PSMPSMoveRawSensorData.cs  PSMPSNavi.cs  PSMPhysicsData.cs  PSMPosef.cs  PSMQuatf.cs  PSMRawTrackerData.cs  PSMResponseMessage.cs  PSMResponseMessage_payload.cs  PSMResponsePayloadType.cs  (+25 more)
bindings/python/: PSMoveClient.py  PSMoveClientPYTHON_wrap.c
psmoveclient/: CMakeLists.txt  ClientConfig.h  ClientControllerView.cpp  ClientControllerView.h  ClientLog.cpp  ClientLog.h  ClientNetworkManager.cpp  ClientNetworkManager.h  ClientPSMoveAPI.cpp  ClientPSMoveAPI.h  ClientRequestManager.cpp  ClientRequestManager.h  PSMoveConsoleClient.cpp  ResponseHandler.cpp  ResponseHandler.h
psmoveconfigtool/: App.cpp  App.h  AppStage.h  AppStage_IntroScreen.cpp  AppStage_IntroScreen.h  AppStage_SelectController.cpp  AppStage_SelectController.h  AssetManager.cpp  CMakeLists.txt  MathUtility.h  Renderer.cpp  Renderer.h  dk2_3dmodel.h  psmove_3dmodel.h  psmove_config_tool.cpp  psmovebody_3dmodel.h
psmoveconfigtool/source_assets/: PSMoveMotionControllerBulb.mtl  PSNaviController.mtl  psmove_3dmodel.mtl  rebuild_psmove_models_header.bat  rebuild_psnavi_model_header.bat
psmovedataframe/: CMakeLists.txt  DataFrameInterface.h  PSMoveDataFrame.h  PSMoveDataFrame.pb.cc  PSMoveDataFrame.pb.h  PSMoveDataFrame.proto  PackedMessage.h  RunProtoCompiler.bat
psmoveservice/: CMakeLists.txt  ControllerEnumerator.h  ControllerManager.cpp  ControllerManager.h  NetworkManager.cpp  NetworkManager.h  PSMoveService.cpp  RequestHandler.cpp  RequestHandler.h  ServerControllerView.cpp  ServerControllerView.h  ServerLog.cpp  ServerLog.h  ServerNetworkManager.cpp  ServerNetworkManager.h  ServerRequestHandler.cpp  ServerRequestHandler.h  ServerUtility.cpp  ServerUtility.h
psmoveservice/PSEye/: PSEyeVideoCapture.cpp  PSEyeVideoCapture.h
psmoveservice/PSMoveConfig/: PSMoveConfig.cpp  PSMoveConfig.h
psmoveservice/PSMoveController/: PSMoveController.cpp  PSMoveController.h  PSMoveDataFrame.h
psmoveservice/PSNaviController/: PSNaviController.cpp
src/: CMakeLists.txt
src/apptray/: CMakeLists.txt  psmove_apptray.cpp  psmove_apptray.rc  resource.h
src/openvr_plugin/: .gitignore  CMakeLists.txt  InitialSetup.bat  ReinstallDriver.bat  SetDriverVars.bat  SteamVR_InitialSetup.bat  SteamVR_InitialSetupWin32.bat  SteamVR_InitialSetupWin64.bat  SteamVR_InstallOSX.sh  SteamVR_ReinstallDriver.bat  SteamVR_ReinstallDriverWin32.bat  SteamVR_ReinstallDriverWin64.bat  SteamVR_UninstallDriver.bat  SteamVR_UninstallDriverWin32.bat  SteamVR_UninstallDriverWin64.bat  driver.vrdrivermanifest  driver_psmoveservice.cpp  driver_psmoveservice.h  monitor_psmoveservice.cpp
src/psmoveclient/: CMakeLists.txt  ClientConfig.h  ClientConstants.h  ClientControllerView.cpp  ClientControllerView.h  ClientGeometry.cpp  ClientGeometry.h  ClientGeometry_CAPI.cpp  ClientGeometry_CAPI.h  ClientHMDView.cpp  ClientHMDView.h  ClientLog.h  ClientNetworkInterface.h  ClientNetworkManager.cpp  ClientNetworkManager.h  ClientPSMoveAPI.cpp  ClientPSMoveAPI.h  ClientRequestManager.cpp  ClientRequestManager.h  ClientTrackerView.cpp  ClientTrackerView.h  ClientVersion.h  PSMoveClient.cpp  PSMoveClient.h  PSMoveClient_CAPI.cpp  PSMoveClient_CAPI.h  PSMoveClient_export.h
src/psmoveconfigtool/: App.cpp  App.h  AppStage.h  AppStage_AccelerometerCalibration.cpp  AppStage_AccelerometerCalibration.h  AppStage_CameraSettings.cpp  AppStage_CameraSettings.h  AppStage_ColorCalibration.cpp  AppStage_ColorCalibration.h  AppStage_ComputeTrackerPoses.cpp  AppStage_ComputeTrackerPoses.h  AppStage_ControllerSettings.cpp  AppStage_ControllerSettings.h  AppStage_DistortionCalibration.cpp  AppStage_DistortionCalibration.h  AppStage_GyroscopeCalibration.cpp  AppStage_GyroscopeCalibration.h  AppStage_HMDAccelerometerCalibration.cpp  AppStage_HMDAccelerometerCalibration.h  AppStage_HMDGyroscopeCalibration.cpp  AppStage_HMDGyroscopeCalibration.h  AppStage_HMDModelCalibration.cpp  AppStage_HMDModelCalibration.h  AppStage_HMDSettings.cpp  AppStage_HMDSettings.h  AppStage_IntroScreen.cpp  AppStage_IntroScreen.h  AppStage_MagnetometerCalibration.cpp  AppStage_MagnetometerCalibration.h  AppStage_MainMenu.cpp  AppStage_MainMenu.h  AppStage_OpticalCalibration.cpp  AppStage_OpticalCalibration.h  AppStage_PairController.cpp  AppStage_PairController.h  AppStage_SelectController.cpp  AppStage_ServiceSettings.cpp  AppStage_ServiceSettings.h  AppStage_TestButtons.cpp  AppStage_TestButtons.h  (+36 more)
src/psmovemath/: CMakeLists.txt  MathAlignment.cpp  MathAlignment.h  MathEigen.cpp  MathEigen.h  MathGLM.cpp  MathGLM.h  MathUtility.cpp  MathUtility.h
src/psmoveprotocol/: CMakeLists.txt  PSMoveProtocol.proto  PSMoveProtocolInterface.h  PackedMessage.h  (+3 more)
tests/: CMakeLists.txt  test_camera.cpp  test_config.cpp  test_console_client.cpp  test_controller.cpp  test_udp_client.cpp  test_udp_server.cpp
(+302 files in other folders)
