# Step into the subdirectories
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    add_subdirectory(openvr_plugin)
ENDIF()
add_subdirectory(psmoveprotocol)
add_subdirectory(psmoveservice)
add_subdirectory(psmoveclient)
add_subdirectory(psmoveconfigtool)
add_subdirectory(psmovemath)
add_subdirectory(tests)
