# Step into the subdirectories
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    MESSAGE(STATUS "Stepping into apptray")
    add_subdirectory(apptray)    
    MESSAGE(STATUS "Stepping into openvr_plugin")
    add_subdirectory(openvr_plugin)
ENDIF()
MESSAGE(STATUS "Stepping into psmoveprotocol")
add_subdirectory(psmoveprotocol)
MESSAGE(STATUS "Stepping into psmoveservice")
add_subdirectory(psmoveservice)
MESSAGE(STATUS "Stepping into psmoveclient")
add_subdirectory(psmoveclient)
MESSAGE(STATUS "Stepping into psmoveconfigtool")
add_subdirectory(psmoveconfigtool)
MESSAGE(STATUS "Stepping into psmovemath")
add_subdirectory(psmovemath)
MESSAGE(STATUS "Stepping into tests")
add_subdirectory(tests)
