# Step into the subdirectories
MESSAGE(STATUS "Stepping into psmoveprotocol")
add_subdirectory(psmoveprotocol)
MESSAGE(STATUS "Stepping into psmovemath")
add_subdirectory(psmovemath)
MESSAGE(STATUS "Stepping into psmoveservice")
add_subdirectory(psmoveservice)
MESSAGE(STATUS "Stepping into psmoveclient")
add_subdirectory(psmoveclient)
MESSAGE(STATUS "Stepping into psmoveconfigtool")
add_subdirectory(psmoveconfigtool)
MESSAGE(STATUS "Stepping into tests")
add_subdirectory(tests)
